# apz-pzpi-22-10-ielizarenko-oleksandr

./: Dockerfile  Makefile  README.md  azure-pipelines.yml  main.py  pyproject.toml
Pract1/: pzpi-22-pzpi-22-10-ielizarenko-oleksandr-design-pattern.txt
Pract1/pzpi-22-pzpi-22-10-ielizarenko-oleksandr-design-pattern/: pzpi-22-pzpi-22-10-ielizarenko-oleksandr-design-pattern.py
alembic/: env.py
alembic/versions/: cadd6a6b4a57_описаниеadd_times_to_stops.py  da31f08073b4_add_users_table.py  eeafec1868d5_add_autoincreent_to_tables.py
app/api/core/: config.py
app/api/endpoints/: auth.py  routes.py  test_data.py
app/api/shemas/: routes.py
app/crud/: base.py  routes.py  users.py
app/db/: initial_models.py  session.py
